tests/snapshots/examples_fixtures/optimizations__desugar_demo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/optimizations/desugar_demo.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/desugar_demo.flx:26:5
   |
26 |     print("a (!!true):", a);
   |     ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/desugar_demo.flx:27:5
   |
27 |     print("b (!!!false):", b);
   |     ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/desugar_demo.flx:28:5
   |
28 |     print("c (!!!!5):", c);
   |     ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/desugar_demo.flx:29:5
   |
29 |     print("d (!(x == y)):", d);
   |     ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/desugar_demo.flx:30:5
   |
30 |     print("e (!(x != y)):", e);
   |     ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/desugar_demo.flx:31:5
   |
31 |     print("f (!!(2 + 3)):", f);
   |     ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/desugar_demo.flx:32:5
   |
32 |     print("g (!(!(5 == 5))):", g);
   |     ^^^^^

Hint:
  Define it first: let print = ...;

Found 7 errors.
== stdout ==
<not executed>
